lnet/include/lnet/lib-types.h
@@ -935,6 +935,10 @@ typedef struct lnet {
 	struct lnet_ni			*ln_loni;
 	/* network zombie list */
 	struct list_head		ln_net_zombie;
+	/* resend messages list */
+	struct list_head		ln_msg_resend;
+	/* spin lock to protect the msg resend list */
+	spinlock_t			ln_msg_resend_lock;
 
 	/* remote networks with routes to them */
 	struct list_head		*ln_remote_nets_hash;
